# tinyllm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pytest-fix-notes.md  CACHE_IMPLEMENTATION.md  CACHE_TASKS_101_110.md  CHANGES_SUMMARY.md  CHAT_IMPROVEMENTS.md  COMPARISON.md  COMPLETION_DETECTION.md  DEVELOPMENT.md  DOCKER.md  DOCKER_FILES_SUMMARY.txt  DOCKER_QUICKSTART.md  Dockerfile  FALLBACK_IMPLEMENTATION.md  IDENTITY_FIX.md  IDENTITY_FIX_FILES.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING.md  LOGGING_CHECKLIST.md  MEMORY_BOUNDS_IMPLEMENTATION.md  METRICS_IMPLEMENTATION.md  MODEL_SWITCHING_GUIDE.md  Makefile  QUEUE_IMPLEMENTATION.md  REACT_IMPLEMENTATION.md  README.md  REDIS_BACKEND_GUIDE.md  ROADMAP_500.md  TASKS_26_30_SUMMARY.md  TELEMETRY_IMPLEMENTATION.md  coverage.json  docker-compose.yaml  examples_web_scraper.py  fix_tests.py  mkdocs.yml  pyproject.toml  (+7 more)
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  prompt.md  test.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docs.yml  nightly.yml  performance-regression.yml  pr-validation.yml  publish-metrics.yml  quality-gates.yml  release.yml  security.yml
benchmarks/: README.md  adversarial_test.py  create_visuals.py  run_benchmarks.py  stress_test.py  tool_comparison.py
benchmarks/results/: adversarial_test.json  benchmark_results.json  benchmark_summary.json  stress_test.json  tool_comparison.json
docker/grafana/dashboards/: models.json  slo.json  tinyllm.json  tracing.json
docker/prometheus/: ALERTING_GUIDE.md  alerts.yml  prometheus.yml
docs/: ARCHITECTURE.md  CHECKPOINTING.md  CI_CD_IMPLEMENTATION.md  CONTRIBUTING.md  FALLBACK_STRATEGIES.md  METRICS_QUICKREF.md  ROADMAP.md  TASK_ROADMAP.md  TESTING.md  WEB_SEARCH_TOOL.md  cache.md  completion_detection.md  identity-system.md  logging.md  loop_node_usage.md  metrics.md  metrics_README.md  observability.md  react_agent.md  spawning.md  telemetry.md  telemetry_architecture.md
docs/concepts/: neural-network-of-llms.md
docs/diagrams/mermaid/: architecture-overview.md  message-flow.md  multi-dimensional-routing.md  node-types.md  recursive-expansion.md
docs/diagrams/plantuml/: architecture.puml  expansion.puml  message-sequence.puml  node-hierarchy.puml
docs/examples/: fanout_example.yaml
docs/specs/: messages.md  nodes.md  prompts.md  tools.md
examples/: cache_example.py  checkpoint_example.py  cohere_demo.py  completion_detection_example.py  error_handling_demo.py  fallback_example.py  fallback_production_example.py  fallback_usage_guide.py  logging_example.py  loop_example.yaml  metrics_example.py  mistral_client_example.py  queue_example.py  react_agent_example.py  request_logging_example.py  spawning_demo.py  structured_logging_demo.py  tracing_example.py  web_search_example.py
examples/workflows/: OVERVIEW.md  README.md  VISUAL_GUIDE.md  data_processing.yaml  fallback_workflow.yaml  iterative_refinement.yaml  multi_stage_analysis.yaml  parallel_consensus.yaml  qa_pipeline.yaml
graphs/: multi_domain.yaml  simple_qa.yaml  timeout_example.yaml  timeout_simple.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  istio-virtualservice.yaml  linkerd-servicemesh.yaml  monitoring.yaml
notebooks/: TinyLLM_Demo.ipynb
prompts/expansion/: failure_analyzer.yaml  specialist_generator.yaml  strategy_evaluator.yaml
prompts/grading/: code_judge.yaml  quality_judge.yaml
prompts/routing/: task_router.yaml
scripts/: check_coverage.py  create_roadmap_issues.py  docker-entrypoint.sh  profile.py  verify-docker-setup.sh
src/tinyllm/: __init__.py  audit.py  cache.py  cache_advanced.py  cli.py  error_aggregation.py  error_branching.py  error_enrichment.py  error_impact.py  error_notifications.py  errors.py  events.py  health.py  logging.py  metrics.py  profiling.py  queue.py  recovery.py  service_mesh.py  telemetry.py  trace_testing.py
src/tinyllm/agents/: __init__.py  plan_execute.py  react.py
src/tinyllm/cluster/: __init__.py  geo_routing.py  global_lb.py  leader_election.py  membership.py  replication.py
src/tinyllm/config/: __init__.py  graph.py  loader.py
src/tinyllm/core/: __init__.py  arena.py  backpressure.py  budget.py  builder.py  checkpoint.py  completion.py  compose.py  context.py  cow.py  defrag.py  executor.py  graph.py  memory.py  message.py  node.py  optimizer.py  registry.py  scheduling.py  streaming.py  trace.py  transaction.py
tests/: FLAKY_DETECTION.md  PARALLEL_TESTING.md  __init__.py  conftest.py  conftest_flaky.py  generators.py  test_cache.py  test_completion.py  test_flaky_example.py
tests/chaos/: __init__.py  test_chaos.py
tests/contracts/: __init__.py  test_contracts.py
tests/fixtures/: __init__.py  generators.py  test_generators.py
tests/fuzzing/: __init__.py  test_graph_fuzzer.py
tests/integration/: README.md  __init__.py  test_ollama.py  test_system.py  test_transactions.py  test_workflows.py
tests/load/: __init__.py  test_load.py
tests/mocks/: mock_server.py  test_mock_server.py
tests/perf/: __init__.py  conftest.py  test_performance.py
tests/stress/: __init__.py  test_stress.py
tests/tracing/: __init__.py  test_trace_based.py
tests/unit/: __init__.py  test_advanced_nodes.py  test_anthropic_client.py  test_api_caller.py  test_arena.py  test_audit.py  test_aws_tools.py  test_backpressure.py  test_baggage.py  test_browser_tools.py  test_budget.py  test_cache_advanced.py  test_cache_tasks_91_100.py  test_calculator.py  test_calendar_tools.py  test_checkpoint.py  test_cluster.py  test_code_executor.py  test_cohere_client.py  test_compose.py  test_cow.py  test_csv_tool.py  test_custom_client.py  test_database_tools.py  test_defrag.py  test_docker_tools.py  test_edge_cases.py  test_email_tools.py  test_error_aggregation.py  test_error_branching.py  test_error_enrich.py  test_error_handling.py  test_error_impact.py  test_error_notifications.py  test_error_property.py  test_error_recovery.py  test_errors.py  test_events.py  test_expansion.py  test_fallback.py  (+83 more)
(+111 files in other folders)
