[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyllm"
version = "0.1.0"
description = "A neural network of LLMs - self-improving multi-agent system using small language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "TinyLLM Contributors" }
]
keywords = [
    "llm",
    "ai",
    "machine-learning",
    "neural-network",
    "ollama",
    "langchain",
    "langgraph",
    "multi-agent",
    "self-improving",
    "local-llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "textual>=0.89.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "ddgs>=9.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=13.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "faker>=22.0.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.98.0",
    "locust>=2.20.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
# Data processing tools
data = [
    "pandas>=2.0.0",
    "jsonpath-ng>=1.6.0",
    "jsonschema>=4.20.0",
]
# AI/ML integration tools
aiml = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pinecone-client>=3.0.0",
    "weaviate-client>=4.0.0",
    "huggingface-hub>=0.20.0",
]
# Observability tools
observability = [
    "prometheus-api-client>=0.5.0",
    "datadog>=0.44.0",
    "elasticsearch>=8.0.0",
]
# Document processing tools
documents = [
    "pypdf>=3.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
]
# All extra tools
all-tools = [
    "tinyllm[data,aiml,observability,documents]",
]

[project.scripts]
tinyllm = "tinyllm.cli:app"

[project.urls]
Homepage = "https://github.com/ndjstn/tinyllm"
Documentation = "https://github.com/ndjstn/tinyllm#readme"
Repository = "https://github.com/ndjstn/tinyllm"
Issues = "https://github.com/ndjstn/tinyllm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyllm"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["tinyllm"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "unit: marks tests as unit tests",
    "flaky: marks tests as potentially flaky",
    "quarantine: marks tests that are quarantined due to flakiness",
    "load: marks tests as load tests",
    "chaos: marks tests as chaos engineering tests",
    "perf: marks tests as performance tests",
    "asyncio: marks tests as async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 300
# Parallel execution settings
# Use with: pytest -n auto
# Or: pytest -n 4
# Flaky test reruns
# Use with: pytest --reruns 3 --reruns-delay 1

[tool.coverage.run]
source = ["src/tinyllm"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstract",
    "except ImportError:",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mutmut]
paths_to_mutate = "src/tinyllm/"
backup = false
runner = "python -m pytest tests/unit/"
tests_dir = "tests/unit/"
dict_synonyms = "Struct, Dict"

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "matplotlib>=3.10.8",
    "mutmut>=2.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "syrupy>=4.6.0",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts", "benchmarks", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used (used extensively in tests, handled by test exclusion)
# Security baseline: Level LOW and confidence LOW (-ll flag in pre-commit)
# This catches high/medium severity issues while reducing noise
